fixed flex wrap spacing and collision

--- a/styles.scss
+++ b/styles.scss
@@ -52,8 +52,8 @@ main {
 }
 
 .flex-item {
-    padding: 8px;
-    // margin: 6px;
+    padding: 20px;
+    margin: 6px;
     color: 777777;
     font-weight: bold;
     font-size: 1.5em;
